# fairdata-metax

./: .flake8  .gitignore  .gitlab-ci.yml  .travis-deploy.sh  .travis.yml  AUTHORS  Dockerfile  ENV_VARS.md  LICENSE  README.md  config-swap-stack.yaml  config-swap-stack.yml  deploy-key.enc  docker-compose-with-v3.yaml  docker-compose.yaml  docker-compose.yml  httpd.dockerfile  pyproject.toml  requirements.in  requirements.txt  sonar-project.properties  sphinx.dockerfile
.githooks/: pre-commit
.github/: dependabot.yml
containers/: nginx-docker.yml
containers/portainer/: templates.json
docs/: README.md  docker-prerequisites.md  docker-stack.md  local-ssl-setup.md  manage-commands.md  single-docker-images.md
docs/api/: README.md  conf.py  index.rst
docs/api/v1/: datasets.rst  end_users.rst  files.rst  general.rst  index.rst  metax_api.rst  reference_data.rst
docs/api/v2/: datasets.rst  end_users.rst  files.rst  general.rst  index.rst  metax_api.rst  reference_data.rst
docs/source/: conf.py  datasets.rst  end_users.rst  files.rst  general.rst  index.rst  list_operations.rst  metax_api.rst  metax_high_level.xml  quick_start.rst  reference_data.rst
docs/v1/source/: conf.py  datasets.rst  files.rst  general.rst
docs/v2/source/: conf.py  datasets.rst  end_users.rst  files.rst  general.rst  index.rst  list_operations.rst  metax_api.rst  oai_pmh.rst  quick_start.rst  reference_data.rst
resources/sql/: init_test.sql
src/: .coveragerc  .flake8  manage.py
src/metax_api/: __init__.py  celery.py  checks.py  onappstart.py  settings.py  urls.py  wsgi.py
src/metax_api/cron/: __init__.py  update_reference_data.py
src/metax_api/exampledata/: dataset_minimal.json
src/metax_api/models/: file.py  (+17 more)
swagger/: README.md  contract.yaml  dataset.yaml  file-metadata.yaml  file.yaml  swagger-yaml-to-html.py  swagger.yaml
swagger/schemas/: catalogrecord.json
swagger/v1/: swagger.yaml
swagger/v2/: swagger.yaml
(+481 files in other folders)
